@@ -1,5 +1,8 @@
 Dev Version:
 
+- Java:
+-- add CORE function: formline
+
 - add Perlito5/Runtime/Formline.pm for CORE::formline() implementation
 
 9.026 cpan:Perlito5 2018-06-13
